tests/samples/negative/types/slice_invalid_element.ax
module slice_invalid_element;

fn bad(values: []void) -> i32 {
    let sliced = values[:];
    return 0;
}

fn main() -> i32 {
    return 0;
}
